# cramerif

./: pyproject.toml
src/cramerif/: __init__.py  __main__.py
src/cramerif/resources/+TOOLS/: __init__.py
src/cramerif/resources/naviaW/: naviaW.py
src/cramerif/resources/naviaW/CategoricalPalettes/: naviaWS.py
