[project]
name = "cramerif"
version = "0.1.5"
description = "Helper library for importing cramerif color schemes"
readme = "README.md"
authors = [
    { name = "Rich Baird", email = "rich@rbaird.me" }
]
requires-python = ">=3.10.0"
dependencies = []

[build-system]
requires = ["setuptools==80.8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cramerif = ["resources/**/*"]

[dependency-groups]
dev = [
    "matplotlib>=3.10.6",
    "numpy>=2.2.6",
    "setuptools==80.8.0",
]
