[project]
name = "cramerif"
version = "0.1.7"
description = "Helper library for importing cramerif color schemes"
readme = "README.md"
authors = [
    { name = "Rich Baird", email = "rich@rbaird.me" }
]
requires-python = ">=3.10.0"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cramerif = ["resources/**/*"]

[dependency-groups]
dev = [
    "matplotlib>=3.10.6",
    "numpy>=2.2.6",
    "opencv-python",
]
